src/objects/Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Item_Additional_Details__c</fullName>
        <label>Item Additional Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Detail__c</fullName>
        <label>Item Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Features__c</fullName>
        <label>Item Features</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Image_Large__c</fullName>
        <label>Item Image Large</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Image__c</fullName>
        <label>Item Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Long_Description__c</fullName>
        <label>Item Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_MSRP__c</fullName>
        <label>Item MSRP</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Model_Number__c</fullName>
        <label>Item Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Short_Description__c</fullName>
        <label>Item Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Specifications__c</fullName>
        <label>Item Specifications</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published to Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Item_Code__c</columns>
        <columns>Item_Model_Number__c</columns>
        <columns>Item_MSRP__c</columns>
        <columns>Item_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Catalog Entries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Published</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Item_Code__c</columns>
        <columns>Item_Model_Number__c</columns>
        <columns>Item_MSRP__c</columns>
        <columns>Item_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Status__c</field>
            <operation>equals</operation>
            <value>Published to Website</value>
        </filters>
        <label>Published Catalog Entries</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>